Added edit/delete on long press course card. Fixed bug on stale data after updates using lifecycle onRestart. Fixed bug with deleting from detail assessments - collections are immutable vs ArrayList is mutable